--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -50,7 +50,8 @@
             <button mat-raised-button color="primary" (click)="getdasId(stepper)"
               [disabled]="!firstFormGroup.valid">Next</button>
           </div>
-
+        <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
+        <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
         </form>
       </mat-step>
 
@@ -78,6 +79,8 @@
             <button class="nexts" (click)="validateKey()" mat-raised-button color="primary"
               [disabled]="!secondFormGroup.valid">Next</button>
           </div>
+          <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
+          <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
         </form>
       </mat-step>
 
@@ -89,9 +92,11 @@
           <mat-form-field class="fieldp">
             <mat-label>Enter new Password</mat-label>
             <input matInput type="password" formControlName="thirdCtrl" placeholder="Enter new Password"
-              name="user.password"
+              name="user.password" id="secretf" showHideInput
               pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#/\$%\^\&*_=+-])[a-zA-Z0-9!@#/\$%\^\&*_=+-]+$"
               minlength="8" maxlength="12" required>
+            <i matSuffix class="material-icons" showHideTrigger="secretf"
+              [showHideStatus]="{ materialIcon: true, id: 'secretf',show: 'visibility_off', hide: 'visibility' }"></i>
             <mat-error *ngIf="(form3.thirdCtrl.invalid && form3.thirdCtrl.errors?.required) && 
                  (form3.thirdCtrl.dirty || form3.thirdCtrl.touched )">
               Password is required.
@@ -108,7 +113,9 @@
           <mat-form-field class="fieldp">
             <mat-label>Enter Confirm Password</mat-label>
             <input matInput type="password" formControlName="thirdCtrlcpass" placeholder="Enter Confirm Password"
-              name="user.cpassword" minlength="8" maxlength="10" required>
+              name="user.cpassword" minlength="8" maxlength="10" id="secretfc" showHideInput required>
+            <i matSuffix class="material-icons" showHideTrigger="secretfc"
+              [showHideStatus]="{ materialIcon: true, id: 'secretfc',show: 'visibility_off', hide: 'visibility' }"></i>
             <mat-error *ngIf="(form3.thirdCtrlcpass.invalid && form3.thirdCtrlcpass.errors?.required) && 
                  (form3.thirdCtrlcpass.dirty || form3.thirdCtrlcpass.touched )">
               Password is required.
@@ -119,6 +126,8 @@
           <button class="nextu" mat-raised-button color="primary" (click)="updatePassword()"
             [disabled]="!thirdFormGroup.valid">Next</button>
         </form>
+        <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
+        <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
       </mat-step>
 
       <!--mat-step tag is used to display Done message-->
