--- a/src/app/change-password/change-password.component.css
+++ b/src/app/change-password/change-password.component.css
@@ -85,3 +85,11 @@
   margin-left: 40%;
   margin-bottom: 20px;
   }
+  .loader{
+    position: fixed;
+    left: 46.5%;
+    top: 47%;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+  }
