--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -2,15 +2,16 @@
 <div>
 
   <!--body tag uses jumbotron class and jumbotron class is defined in css-->
+
   <body class="jumbotron">
     <!--mat-toolbar tag is used to display the title of application i.e. Leave Tracker with logo of Atos, Home icon and Menu -->
     <mat-toolbar color="primary" class="size">
       <!--img tag is used for Atos Logo-->
       <img class="imagenav" src="./assets/logo.png">
       <span class="spacer">Leave Tracker</span>
-       
+
       <!--button tag is used for redirect to Home Page-->
-      <button mat-icon-button class="home"  routerLink="/list">
+      <button mat-icon-button class="home" routerLink="/list">
         <mat-icon>home</mat-icon>
       </button>
       <!--button tag is used to trigger menu-->
@@ -39,7 +40,7 @@
           <mat-icon>account_circle</mat-icon>
           <span>Edit Profile</span>
         </button>
-       <!--button tag is used to redirect to Sign In Page-->
+        <!--button tag is used to redirect to Sign In Page-->
         <button mat-menu-item (click)="onLogout()">
           <mat-icon>logout</mat-icon>
           <span>Logout</span>
@@ -66,12 +67,10 @@
       <!--mat-form-field tag is used for Entering the Old Password-->
       <mat-form-field class="field" appearance="fill">
         <mat-label>Enter Old Password</mat-label>
-        <input [type]="hide ? 'password' : 'text'" matInput name="oldPassword" [(ngModel)]="user.oldPassword"
+        <input type="password" matInput showHideInput id="secretold" name="oldPassword" [(ngModel)]="user.oldPassword"
           #oldPassword="ngModel" minlength="8" maxlength="12" required>
-        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-          [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
+        <i matSuffix class="material-icons" showHideTrigger="secretold"
+          [showHideStatus]="{ materialIcon: true, id: 'secretold',show: 'visibility_off', hide: 'visibility' }"></i>
         <mat-error>
           <div *ngIf="oldPassword.invalid && (oldPassword.dirty || oldPassword.touched)">
             <div *ngIf="oldPassword.errors?.required">
@@ -84,14 +83,12 @@
       <!--mat-form-field tag is used for Entering the New Password-->
       <mat-form-field class="field" appearance="fill">
         <mat-label>Enter New Password</mat-label>
-        <input [type]="hideNew ? 'password' : 'text'" matInput
+        <input type="password" matInput showHideInput id="secretnew"
           pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#/\$%\^\&*_=+-])[a-zA-Z0-9!@#/\$%\^\&*_=+-]+$"
           minlength="8" maxlength="12" name="newPassword" [(ngModel)]="user.newPassword" #newPassword="ngModel"
           required>
-        <button mat-icon-button matSuffix (click)="hideNew = !hideNew" [attr.aria-label]="'HideNew password'"
-          [attr.aria-pressed]="hideNew">
-          <mat-icon>{{hideNew ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
+        <i matSuffix class="material-icons" showHideTrigger="secretnew"
+          [showHideStatus]="{ materialIcon: true, id: 'secretnew',show: 'visibility_off', hide: 'visibility' }"></i>
         <mat-error>
           <div *ngIf="newPassword.invalid && (newPassword.dirty || newPassword.touched)">
 
@@ -114,12 +111,10 @@
       <!--mat-form-field tag is used for Entering the Confirm New Password-->
       <mat-form-field class="field" appearance="fill">
         <mat-label>Confirm Password</mat-label>
-        <input matInput [type]="hideConfirm ? 'password' : 'text'" minlength="8" maxlength="12" name="cpassword"
+        <input matInput showHideInput id="secretconfirm" type="password" minlength="8" maxlength="12" name="cpassword"
           [(ngModel)]="user.cpassword" #cpassword="ngModel" required>
-        <button mat-icon-button matSuffix (click)="hideConfirm = !hideConfirm" [attr.aria-label]="'HideConfirm password'"
-          [attr.aria-pressed]="hideConfirm">
-          <mat-icon>{{hideConfirm ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
+        <i matSuffix class="material-icons" showHideTrigger="secretconfirm"
+          [showHideStatus]="{ materialIcon: true, id: 'secretconfirm',show: 'visibility_off', hide: 'visibility' }"></i>
         <mat-error>
           <div *ngIf="cpassword.invalid && (cpassword.dirty || cpassword.touched)">
             <div *ngIf="cpassword.errors?.required">
@@ -135,7 +130,10 @@
       </button>
 
     </mat-card>
+    <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
+ <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
   </form>
+  
 </div>
-
+ 
 </html>
