--- a/src/app/deactivate/deactivate.component.css
+++ b/src/app/deactivate/deactivate.component.css
@@ -117,3 +117,11 @@
   width: 150px;
   margin-left: 35%;
   }
+  .loader{
+    position: fixed;
+    left: 46.5%;
+    top: 47%;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
