--- a/src/app/editprofile/editprofile.component.html
+++ b/src/app/editprofile/editprofile.component.html
@@ -86,7 +86,7 @@
       <!--Contact No field-->
       <mat-form-field class="field" appearance="fill">
         <mat-label>Contact No</mat-label>
-        <input matInput formControlName="mobile" minlength="11" maxlength="14" required>
+        <input matInput formControlName="mobile" pattern="^[+][0-9]+(?:[\d-.\s()]*)$" minlength="13" maxlength="15" required>
         <mat-error>Enter a valid Mobile Number</mat-error>
       </mat-form-field>
 
@@ -134,8 +134,8 @@
 
     </mat-card>
   </form>
-
-  <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="accent"></mat-spinner>
+<!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
+<mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
 </div>
 
 </html>
