--- a/src/app/forgotpassword/forgotpassword.component.css
+++ b/src/app/forgotpassword/forgotpassword.component.css
@@ -83,3 +83,11 @@
 .done{
     text-align: center;
 }
+.loader{
+    position: fixed;
+    left: 46.5%;
+    top: 47%;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
