--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -98,3 +98,12 @@
     width: 110px;
     margin-left: 40%;
     }
+.loader{
+    position: fixed;
+    left: 46.5%;
+    top: 47%;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}    
+    
