--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -65,6 +65,8 @@
     </form>
 
   </mat-card>
+  <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
+  <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
 </div>
 
 </html>
