--- a/src/app/view/view.component.css
+++ b/src/app/view/view.component.css
@@ -94,3 +94,11 @@ margin-bottom: 5px;
 .button{
 margin-left: 45%;
 }
+.loader{
+  position: fixed;
+  left: 46.5%;
+  top: 47%;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
