--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -137,6 +137,9 @@
   <span class="num" *ngIf="dataSource.length>0">Number of Days for Sick Leaves :- {{this.SL}}</span><br>
   <span class="num" *ngIf="dataSource.length>0">Number of Days for Casual Leaves :- {{this.CL}}</span><br>
   <span class="num" *ngIf="dataSource.length>0">Number of Days for Vacational Leaves :- {{this.VL}}</span><br>
+
+  <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
+  <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="accent"></mat-spinner>
 </div>
 
 </html>
