Final Frontend code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-
-<div style="text-align : center">
-<h1>
- 
-</h1>
+<div class="txt">
 </div>
-
-
+<!--router-outlet tag emits an activate event when a new component is instentiated-->
 <router-outlet></router-outlet>
 
