--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,9 +1,7 @@
-<html lang="en" class="main">
 <div>
 
-  <!--body tag uses jumbotron class and jumbotron class is defined in css-->
-
-  <body class="jumbotron">
+  <!--div tag uses jumbotron class and jumbotron class is defined in css-->
+  <div class="jumbotron">
     <!--mat-toolbar tag is used to display the title of application i.e. Leave Tracker with logo of Atos, Home icon and Menu -->
     <mat-toolbar color="primary" class="size">
       <!--img tag is used for Atos Logo-->
@@ -48,7 +46,7 @@
       </mat-menu>
 
     </mat-toolbar>
-  </body><br><br><br>
+  </div><br><br><br>
   <span class="details">Change Password</span>
 
   <!--form tag is used for Changing Password of Employee with 3 Field's-->
@@ -131,9 +129,7 @@
 
     </mat-card>
     <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
- <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
+    <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
   </form>
-  
+
 </div>
- 
-</html>
