--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -1,16 +1,14 @@
-<html lang="en" class="main">
 <div>
-  <!--body tag uses jumbotron class and jumbotron class is defined in css-->
 
-  <body class="jumbotron">
+  <!--div tag uses jumbotron class and jumbotron class is defined in css-->
+  <div class="jumbotron">
     <!--mat-toolbar tag is used to display the title of application i.e. Leave Tracker with logo of Atos -->
     <mat-toolbar color="primary" class="size">
       <!--img tag is used for Atos Logo-->
       <img class="image" src="./assets/logo.png">
       <span class="spacer">Leave Tracker</span>
     </mat-toolbar>
-    <router-outlet></router-outlet>
-  </body>
+  </div>
 
   <!--mat-card tag(all the field's, button's and anchor tag's are inserted)-->
   <mat-card class="card">
@@ -50,8 +48,8 @@
             <button mat-raised-button color="primary" (click)="getdasId(stepper)"
               [disabled]="!firstFormGroup.valid">Next</button>
           </div>
-        <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
-        <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
+          <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
+          <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
         </form>
       </mat-step>
 
@@ -113,7 +111,7 @@
           <mat-form-field class="fieldp">
             <mat-label>Enter Confirm Password</mat-label>
             <input matInput type="password" formControlName="thirdCtrlcpass" placeholder="Enter Confirm Password"
-              name="user.cpassword" minlength="8" maxlength="10" id="secretfc" showHideInput required>
+              name="user.cpassword" minlength="8" maxlength="12" id="secretfc" showHideInput required>
             <i matSuffix class="material-icons" showHideTrigger="secretfc"
               [showHideStatus]="{ materialIcon: true, id: 'secretfc',show: 'visibility_off', hide: 'visibility' }"></i>
             <mat-error *ngIf="(form3.thirdCtrlcpass.invalid && form3.thirdCtrlcpass.errors?.required) && 
@@ -145,5 +143,3 @@
     <br><br>
   </mat-card>
 </div>
-
-</html>
