--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,19 +1,13 @@
-<html lang="en" class="main">
+
 <div>
 
-  <!--body tag uses jumbotron class and jumbotron class is defined in css-->
-
-  <body class="jumbotron">
-
+  <!--div tag uses jumbotron class and jumbotron class is defined in css-->
+  <div class="jumbotron">
     <mat-toolbar color="primary" class="size">
-
       <img class="imagenav" src="./assets/logo.png">
       <span class="spacer">Leave Tracker</span>
-
     </mat-toolbar>
-
-    <router-outlet></router-outlet>
-  </body>
+  </div>
 
   <!--mat-card tag(all the field's and Submit button are inserted)-->
   <mat-card class="card">
@@ -261,4 +255,3 @@
 
 </div>
 
-</html>
