--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,17 +1,14 @@
-<html lang="en" class="main">
 <div>
 
-  <!--body tag uses jumbotron class and jumbotron class is defined in css-->
-
-  <body class="jumbotron">
+  <!--div tag uses jumbotron class and jumbotron class is defined in css-->
+  <div class="jumbotron">
     <!--mat-toolbar tag is used to display the title of application i.e. Leave Tracker with logo of Atos -->
     <mat-toolbar color="primary" class="size">
       <!--img tag is used for Atos Logo-->
       <img class="image" src="./assets/logo.png">
       <span class="spacer">Leave Tracker</span>
     </mat-toolbar>
-    <router-outlet></router-outlet>
-  </body>
+  </div>
 
   <!--mat-card tag(all the field's, button's and anchor tag's are inserted)-->
   <mat-card class="card">
@@ -68,5 +65,3 @@
   <!--After clicking on Submmit till it redirect's to Sign In page, Spinner will be actiavted-->
   <mat-spinner [diameter]="100" class="loader" *ngIf="showSpinner" color="primary"></mat-spinner>
 </div>
-
-</html>
