--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,12 @@
 
 /* html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+.main{
+    height: 500px;
+    width: 100%;
+   overflow: hidden;
+}
+
+.bgcolor{
+    background-color:rgb(223, 245, 248);
+}
